# ros2_so_arm100

./: .gitmodules  README.md
.github/workflows/: build_and_test.yaml  format.yaml
so_arm100_description/: CMakeLists.txt  SO100_SO101_Migration_Summary.md  package.xml
so_arm100_description/SO-ARM101-Assets/: so101_new_calib.urdf
so_arm100_description/control/: ros2_controllers.yaml  so_arm100.ros2_control.xacro
so_arm100_description/launch/: controllers_bringup.launch.py  rviz.launch.py
so_arm100_description/rviz/: config.rviz
so_arm100_description/so_arm100_description/: constants.py  launch_utils.py
so_arm100_description/urdf/: so_arm100.urdf  so_arm100.urdf.xacro  so_arm100_macro.xacro  test_4_VSCode_ROS2_extension.urdf
so_arm100_moveit_config/: .setup_assistant  CMakeLists.txt  moveit_configs.toml  package.xml
so_arm100_moveit_config/config/: joint_limits.yaml  ompl_planning.yaml  so_arm100.srdf  trajectory_execution.yaml
so_arm100_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py
so_arm100_moveit_config/rviz/: move_group.rviz
